# rdvhome

./: .gitignore  RDVHome.ipa  apps.json  fabfile.py  led.py  manage.py  requirements.txt  run.py  run.sh  server.py
.github/workflows/: altstore-deploy.yml
client/app/: build.gradle  proguard-rules.pro
deprecated/: api.py  mqtt.py  server.py
deprecated/templates/: index.html
deprecated/templatetags/: js.py
deprecated/utils/: decorators.py
fdsf/sdfad/: CHANGELOG.md  README.md  package.json
myhome/: conf.py
myhome/cli/: utils.py
myhome/launcher/: main.py
myhome/utils/: importutils.py
raycast/: CHANGELOG.md  README.md  package-lock.json  package.json
raycast/src/: index.tsx
rdvbridge/: .deployignore  .gitignore  Makefile  pyproject.toml
rdvbridge/ha_config/: automations.yaml  configuration.yaml  covers_windows.yaml  lights_gpio.yaml  lights_template.yaml
rdvbridge/ha_config/custom_components/rdv_gpio/: __init__.py  light.py  manifest.json
rdvbridge/ha_config/custom_components/rdv_window/: cover.py  manifest.json
rdvbridge/rdvbridge/: cli.py
rdvhome/: api.py  app.py  conf.py  constants.py  encoding.py  events.py  fabfile.py  firebase.py  gpio.py  homekit.py  mqtt.py  requirements.txt  server.py  settings.py  signals.py  state.py  toggles.py  urls.py  views.py  wsgi.py
rdvhome/backend/: Cargo.toml
rdvhome/cli/: dispatch.py  main.py  utils.py
rdvhome/controllers/: base.py  gpio.py  nanoleaf.py  philips.py  samsungtv.py  scenes.py
rdvhome/frontend/: electron.html  electron.js  (+3 more)
react/: index.android.js  index.ios.js  package.json
(+139 files in other folders)
