[project]
name = "rdvbridge"
version = "0.1.0"
description = "Home Assistant setup and deploy tool for rdvhome"
requires-python = ">=3.12"
dependencies = [
    "click>=8",
    "homeassistant",
    "RPi.GPIO>=0.7; platform_machine == 'aarch64'",
]

[project.scripts]
rdvbridge = "rdvbridge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rdvbridge"]
